<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_linearlayout"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_dialog_text0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#B2000000"
        android:text="@string/textview_dialog_text0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edittext_dialog_text0"
        android:layout_width="220dp"
        android:layout_height="37dp"
        android:autofillHints=""
        android:background="@drawable/edittext_register"
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edittextlink"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cecece" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_dialog_text1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#B2000000"

            android:layout_weight="1"
            android:background="@drawable/dialog_textview1"
            android:gravity="center"

            android:text="@string/textview_dialog_fms1_value"
            android:textSize="17sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cecece" />

        <TextView
            android:id="@+id/textview_dialog_text2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_textview2"
            android:gravity="center"
            android:text="@string/textview_dialog_text_value2"
            android:textColor="@color/dialog_text_blue"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>