<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_linearlayout"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_dialog_start0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#B2000000"
        android:text="@string/textview_dialog_start0_value"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cecece" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_dialog_start1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#B2000000"

            android:layout_weight="1"
            android:background="@drawable/dialog_textview1"
            android:gravity="center"

            android:text="@string/textview_dialog_start1_value"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cecece" />

        <TextView
            android:id="@+id/textview_dialog_start2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_textview3"
            android:gravity="center"
            android:text="@string/textview_dialog_start2_value"
            android:textColor="@color/dialog_text_blue"
            android:textSize="16sp" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cecece" />
        <TextView
            android:id="@+id/textview_dialog_start3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_textview2"
            android:gravity="center"
            android:text="@string/textview_dialog_start3_value"
            android:textColor="@color/dialog_text_blue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>